SalesforceData/src/objects/Salary__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <label>Basic</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_CreditedTo__c</fullName>
        <label>EMPLOYEE_CreditedTo</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>Salary</relationshipLabel>
        <relationshipName>CreditedTo_Salary_Employee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <label>PF Deduction</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <label>Salary Credit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_ID__c</fullName>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <label>Special Allowance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c  +  HRA__c  +  Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary</label>
    <nameField>
        <label>Salary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_Account_number_cannot_be_NULL</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Bank_Account_Number__c ) = TRUE</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Bank_Account_number_cannot_be_NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_number_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Bank_Account_Number__c)  = TRUE</errorConditionFormula>
        <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
        <errorMessage>Cannot Change Bank Acc No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary_cannot_be_processed_for_inactive</fullName>
        <active>true</active>
        <description>“Salary cannot be processed for inactive employees</description>
        <errorConditionFormula>EMPLOYEE_CreditedTo__r.Is_Active__c = FALSE</errorConditionFormula>
        <errorMessage>“Salary cannot be processed for inactive employees&quot;</errorMessage>
    </validationRules>
</CustomObject>